--- a/templates/web_personal/skills.html
+++ b/templates/web_personal/skills.html
@@ -1,25 +1,42 @@
 {% extends 'web_personal/base.html' %}
 {% load static %}
-
+{% block css %} <link href="{% static "web_personal/css/skills.css" %}" rel="stylesheet">{% endblock %}
 {% block contenido %}
-    <div class="progress">
-        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10"
-             aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <div class="progress">
-        <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%"
-             aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <div class="progress">
-        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50"
-             aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <div class="progress">
-        <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%"
-             aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <div class="progress">
-        <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
-             aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
+
+    <header class="masthead" style="background-image: url('{% static "web_personal/img/home-bg.jpg" %}')">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="site-heading">
+
+<p>HTML</p>
+<div class="container">
+  <div class="skills html">90%</div>
+</div>
+
+<p>CSS</p>
+<div class="container">
+  <div class="skills css">80%</div>
+</div>
+
+<p>JavaScript</p>
+<div class="container">
+  <div class="skills js">65%</div>
+</div>
+
+<p>PHP</p>
+<div class="container">
+  <div class="skills php">60%</div>
+</div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+
+
 {% endblock %}
