--- a/templates/web_personal/base.html
+++ b/templates/web_personal/base.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>{{ name }}</title>
-    <link rel="shortcut icon" href="https://es.gravatar.com/userimage/119140617/3c567d53b6101285eed588cfcad36e73.jpeg" />
+    <title>{{ usuario.first_name }}</title>
+    <link rel="shortcut icon" href="https://es.gravatar.com/userimage/119140617/3c567d53b6101285eed588cfcad36e73.jpeg"/>
 
     <!-- Estilos y fuentes del template  -->
     <link href="{% static "web_personal/vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
@@ -26,7 +26,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand" href="{% url "index" %}">{{ name }}</a>
+        <a class="navbar-brand" href="{% url "index" %}">{{ usuario.first_name }}</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -36,19 +36,19 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url "index" %}">Portada</a>
+                    <a class="nav-link" href="#index">Portada</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url "about" %}">Acerca de</a>
+                    <a class="nav-link" href="#about">Acerca de</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url "portafolio" %}">Portafolio</a>
+                    <a class="nav-link" href="#portafolio">Portafolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url "contact" %}">Contacto</a>
+                    <a class="nav-link" href="#contact">Contacto</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url "skills" %}">Skills</a>
+                    <a class="nav-link" href="#skills">Skills</a>
                 </li>
             </ul>
         </div>
@@ -78,16 +78,17 @@
                   </span>
                 </a>
               </li>
-              <li class="list-inline-item">
-                <a href="#">
+                <li class="list-inline-item">
+                    <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
                   </span>
-                </a>
-              </li>
+                    </a>
+                </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; 2018 · Juan Pérez (Ingeniero Industrial) </p>
+              <p class="copyright text-muted">Copyright &copy; {{ usuario.year.year }} · {{ usuario.first_name }}
+                  ({{ usuario.career }}) </p>
           </div>
         </div>
       </div>
