--- a/templates/web_personal/index.html
+++ b/templates/web_personal/index.html
@@ -1,23 +1,152 @@
 {% extends 'web_personal/base.html' %}
 {% load static %}
-
+{% block css %}
+    <link href="{% static "web_personal/css/skills.css" %}" rel="stylesheet">
+{% endblock %}
 {% block contenido %}
-<!-- Cabecera -->
+    <!-- Principal -->
 
-<header class="masthead" style="background-image: url('{% static "web_personal/img/home-bg.jpg" %}')">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-md-10 mx-auto">
-                <div class="site-heading">
-                    <h1>{{ name }}</h1>
-                    <span class="subheading">{{ carrera }}</span>
+    <header class="masthead" style="background-image: url('{% static "web_personal/img/home-bg.jpg" %}')">
+        <div class="overlay"></div>
+        <div class="container align-items-center" id="index">
+            <div class="row ">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="site-heading">
+                        <img src="{% static "web_personal/img/emilio.jpg" %}"
+                             alt="Avatar" class="avatar col-lg-5 col-md-5 offset-lg-1 rounded-circle mx-auto d-block">
+
+                        <h1 class="cover-heading">{{ usuario.first_name }}</h1>
+                        <span class="subheading">{{ usuario.career }}</span>
+                        <p class="lead">{{ usuario.description }}</p>
+
+                    </div>
                 </div>
             </div>
         </div>
+    </header>
+
+    <!-- About me -->
+    <header class="masthead" style="background-image: url('{% static "web_personal/img/about-bg.jpg" %}')">
+        <div class="overlay"></div>
+        <div class="container" id="about">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="site-heading">
+                        <h1>Acerca de</h1>
+                        <span class="subheading">Biografía</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- Contenido Principal -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-4 offset-lg-1">
+                <img class="img-fluid avatar"
+                     src="{% static "web_personal/img/emilio.jpg" %}" alt="">
+                <!--src="{% static "web_personal/img/avatar.jpg" %}"-->
+            </div>
+            <div class="col-lg-7 col-md-8">
+                <h2 class="section-heading">{{ usuario.first_name }}</h2>
+                <p>{{ usuario.biography }}</p>
+
+            </div>
+        </div>
     </div>
-</header>
+    <br>
+
+    <!-- Portafolio -->
+    <header class="masthead" style="background-image: url('{% static "web_personal/img/portfolio-bg.jpg" %}')">
+        <div class="overlay"></div>
+        <div class="container" id="portafolio">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="site-heading">
+                        <h1>Portafolio</h1>
+                        <span class="subheading">Currículo</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- Portafolio -->
+    <div class="container">
+        <!-- Proyecto -->
+        {% for p in proyectos %}
+            <div class="row project">
+                <div class="col-lg-3 col-md-4 offset-lg-1">
+                    <img class="img-fluid" src="{{ p.image }}" alt="{{ p.image }}">
+                </div>
+                <div class="col-lg-7 col-md-8">
+                    <h2 class="section-heading title">{{ p.name }}</h2>
+                    <p>{{ p.description }}</p>
+                    <p><a href="{{ p.link }}">Más información</a></p>
+                </div>
+            </div>
+        {% endfor %}
+        {% for foo in proyectos %}
+            {{ foo.proyectos }}
+        {% endfor %}
+
+
+    </div>
+    <br>
+
+    <!-- Contacto -->
+    <header class="masthead" style="background-image: url('{% static "web_personal/img/contact-bg.jpg" %}')">
+        <div class="overlay"></div>
+        <div class="container" id="contact">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="site-heading">
+                        <h1>Contacto</h1>
+                        <span class="subheading">Asesoría</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- Contenido Principal -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur
+                    voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam
+                    ducimus consectetur?</p>
+                <br>
+                <p><b>Teléfono:</b> {{ usuario.phone }}</p>
+                <p><b>Honorarios:</b> {{ usuario.fee }}</p>
+            </div>
+        </div>
+    </div>
+    <br>
+    <!--Skills -->
+    <header class="masthead" style="background-image: url('{% static "web_personal/img/skills.png" %}')">
+        <div class="overlay"></div>
+        <div class="container" id="skills">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="site-heading">
+                        <h1>Skills</h1>
+                        {% for sk in skills %}
+                            <p>{{ sk.name }}</p>
+                            <div class="container">
+                                <div class="skills html"
+                                     style="width: {{ sk.domain }}%; background-color: {{ sk.color }};">{{ sk.domain }}%
+                                </div>
+                            </div>
+                        {% endfor %}
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
 
 {% endblock %}
-
